--- a/assets/css/templatemo-finance-business.css
+++ b/assets/css/templatemo-finance-business.css
@@ -392,7 +392,7 @@ header .navbar {
 }
 
 .Modern-Slider .item-1 .img-fill {
-	background-image: url(../images/finwoman.png);
+	background-image: url(../images/home-slide.jpg);
 }
 
 .Modern-Slider .item-2 .img-fill {
