--- a/assets/css/templatemo-finance-business.css
+++ b/assets/css/templatemo-finance-business.css
@@ -1441,3 +1441,105 @@ footer .contact-form button.filled-button:hover {
 		border-bottom: none!important;
 	}
 }
+
+.wraper * {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.wraper {
+    background-color: #eeeeea;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.wraper .container {
+    height: 400px;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: start;
+}
+
+.wraper .card {
+    width: 80px;
+    border-radius: .75rem;
+    background-size: cover;
+    cursor: pointer;
+    overflow: hidden;
+    border-radius: 2rem;
+    margin: 0 10px;
+    display: flex;
+    align-items: flex-end;
+    transition: .6s cubic-bezier(.28,-0.03,0,.99);
+    box-shadow: 0px 10px 30px -5px rgba(0,0,0,0.8);
+}
+
+.wraper .card > .row {
+    color: white;
+    display: flex;
+    flex-wrap: nowrap;
+}
+
+.wraper .card > .row > .icon {
+    background: #223;
+    color: white;
+    border-radius: 50%;
+    width: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 15px;
+}
+
+.wraper .card > .row > .description {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    overflow: hidden;
+    height: 80px;
+    width: 520px;
+    opacity: 0;
+    transform: translateY(30px);
+    transition-delay: .3s;
+    transition: all .3s ease;
+}
+
+.wraper .description p {
+    color: #b0b0ba;
+    padding-top: 5px;
+}
+
+.wraper .description h4 {
+    text-transform: uppercase;
+}
+
+.wraper input {
+    display: none;
+}
+
+.wraper input:checked + label {
+    width: 600px;
+}
+
+.wraper input:checked + label .description {
+    opacity: 1 !important;
+    transform: translateY(0) !important;
+}
+
+.wraper .card[for="c1"] {
+    background-image: url('../images/5.jpg');
+}
+.wraper .card[for="c2"] {
+    background-image: url('../images/1.jpg');
+}
+.wraper .card[for="c3"] {
+    background-image: url('../images/3.jpg');
+}
+.wraper .card[for="c4"] {
+    background-image: url('../images/4.jpg');
+}
