--- a/assets/css/templatemo-finance-business.css
+++ b/assets/css/templatemo-finance-business.css
@@ -742,12 +742,50 @@ ul.slick-dots {
     letter-spacing: 0.5px;
 }
 
+/* Forwar info */
 
+.about-info .forward-content {
+	padding: 0px!important;
+	
+}
 
+.about-info .forward-content {
+	padding: 0px!important;
+	margin-right: 30px;
+}
+
+.more-info .forward-content {
+	padding: 45px 45px 45px 30px;
+}
+
+.more-info .forward-content span {
+	text-transform: uppercase;
+	font-size: 15px;
+	color: #666;
+	letter-spacing: 1px;
+	margin-bottom: 10px;
+	display: block;
+}
+
+.more-info .forward-content h2 {
+	font-size: 36px;
+	font-weight: 600;
+	margin-bottom: 35px;
+}
+
+.more-info .forward-content em {
+	font-style: normal;
+	color: #3bb801;
+}
+
+.more-info .forward-content p {
+	margin-bottom: 30px;
+}
 /* More Info */
 
 .more-info {
-	margin-top: 100px;
+	margin-top: 65px;
+	margin-bottom: 35px;
 }
 
 .more-info .left-image img {
@@ -1152,6 +1190,32 @@ footer .contact-form button.filled-button:hover {
 
 .sub-footer a {
 	color: #fff;
+}
+
+.page-heading-forward {
+	text-align: center;
+	background-image: url(../images/dark-green-landscape.jpg);
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	padding: 230px 0px 150px 0px;
+	color: #fff;
+}
+
+.page-heading-forward h1 {
+	text-transform: capitalize;
+	font-size: 36px;
+	font-weight: 700;
+	letter-spacing: 2px;
+	margin-bottom: 18px;
+}
+
+.page-heading-forward span {
+	font-size: 15px;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	color: #fff;
+	display: block;
 }
 
 
